[gd_scene load_steps=5 format=3 uid="uid://c3p7kumnlisvx"]

[ext_resource type="Script" path="res://game/levels/car/football/mini_game_football_player_character.gd" id="1_wy2j3"]

[sub_resource type="BoxMesh" id="BoxMesh_rcyni"]
size = Vector3(1, 1, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_inami"]

[sub_resource type="BoxMesh" id="BoxMesh_3bv6a"]
size = Vector3(0.25, 1.3, 0.25)

[node name="Character" type="Node3D"]
script = ExtResource("1_wy2j3")

[node name="AudioStep" type="AudioStreamPlayer" parent="."]

[node name="Character" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.77085, 0)

[node name="Body" type="MeshInstance3D" parent="Character"]
mesh = SubResource("BoxMesh_rcyni")

[node name="Head" type="MeshInstance3D" parent="Character/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.44169e-08, 1.00717, 0.225049)
mesh = SubResource("BoxMesh_inami")
skeleton = NodePath("../..")

[node name="ArmR" type="Marker3D" parent="Character/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.604232, 0.46343, -0.00573596)

[node name="Mesh" type="MeshInstance3D" parent="Character/Body/ArmR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6098, 0)
mesh = SubResource("BoxMesh_3bv6a")
skeleton = NodePath("../../..")

[node name="ArmL" type="Marker3D" parent="Character/Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.506296, 0.485893, 2.21309e-08)

[node name="Mesh" type="MeshInstance3D" parent="Character/Body/ArmL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.102465, -0.614122, -0.00573599)
mesh = SubResource("BoxMesh_3bv6a")
skeleton = NodePath("../../..")

[node name="LegR" type="Marker3D" parent="Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.276885, -0.482465, -0.00573596)

[node name="LegR" type="MeshInstance3D" parent="Character/LegR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.634371, 0)
mesh = SubResource("BoxMesh_3bv6a")
skeleton = NodePath("../..")

[node name="LegL" type="Marker3D" parent="Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3237, -0.502208, -0.00573596)

[node name="LegL" type="MeshInstance3D" parent="Character/LegL"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.634371, 0)
mesh = SubResource("BoxMesh_3bv6a")
skeleton = NodePath("../..")
